navbar behind bug free

--- a/react-port/src/styles/Main.css
+++ b/react-port/src/styles/Main.css
@@ -13,3 +13,6 @@
 .compPic {
   align-content: center;
 }
+.navbar {
+  z-index: 9;
+}
